fixed bag align the button to the center

--- a/style.css
+++ b/style.css
@@ -92,20 +92,7 @@ h1 {
 	margin: auto;
 	flex-direction: column;
 }
-button {
-	width: 30px;
-	border: none;
-	background: transparent;
-	color: #fff;
-	font-size: 40px;
-	text-align: center;
-	outline: none;
-	opacity: 0.5;
-	transition: opacity 300ms ease-out;
-}
-button:hover {
-	opacity: 1;
-}
+
 .slider {
 	display: flex;
 	flex-direction: row;
@@ -328,6 +315,7 @@ input[type="submit"] {
 	border: 0;
 	transition: 0.3s;
 	cursor: pointer;
+	margin: 0 auto;
 }
 input[type="submit"]:hover {
 	color: #fff;
